----------------------------------------------------------------------
 OmegaT x.x.x Changes
----------------------------------------------------------------------

x.x.x vs. 1.7.2


  0 Enhancements
  1 Bugfixes

----------------------------------------------------------------------
x.x.x


 Bug fixes:
  
  - <context> should be ignored in XLIFF files  
  http://sourceforge.net/support/tracker.php?aid=1800677

----------------------------------------------------------------------
 OmegaT 1.7.2 Changes
----------------------------------------------------------------------

1.7.2 vs. 1.7.1


  11 Enhancements
   7 Bugfixes

----------------------------------------------------------------------
1.7.2


Contains three new localisations (Simplified Chinese, Traditional Chinese and Czech) and bug fixes

 Implemented requests:
  
  - Have a more complete ISO 639 list in the UI
  http://sourceforge.net/support/tracker.php?aid=1755240

  - instant start display in the main window
  http://sourceforge.net/support/tracker.php?aid=1604238

  - Current file highlighted in Project Files Window
  http://sourceforge.net/support/tracker.php?aid=1766670 

 Other enhancements:

  - Simplified Chinese UI localisation + manual translation
  - French localisation updated to 1.7.1
  - Basque localisation updated to 1.7.1
  - Slovac localisation updated to 1.7.1
  - Serbo-Croatian localisation updated to 1.7.1
  - Traditional Chinese 1.6.2 localisation
  - Dutch 1.6.2 localisation
  - Czech UI localisation + manual translation
 
 Bug fixes:
  
  - Incorrect/unclear data in project_save.txt  
  http://sourceforge.net/support/tracker.php?aid=1616247

  - regression in the JA UI strings 1.7.1 test
  http://sourceforge.net/support/tracker.php?aid=1749787

  - Only try to get MediaWiki page if a string has been entered
  http://sourceforge.net/support/tracker.php?aid=1762625

  - readme_pt_BR.txt is garbled (incorrect encoding?)
  http://sourceforge.net/support/tracker.php?aid=1631735
