@@ -5,13 +5,17 @@
 x.x.x vs. 1.7.2
 
 
-  0 Enhancements
+  1 Enhancements
   1 Bugfixes
 
 ----------------------------------------------------------------------
 x.x.x
 
-
+  Implemented requests:
+  
+  - Editor window name
+  http://sourceforge.net/support/tracker.php?aid=1764103
+ 
  Bug fixes:
   
   - <context> should be ignored in XLIFF files  
